--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Package files
-package.json
-package-lock.json
-yarn.lock
+# Package files (uncommented for local development branch)
+# package-lock.json
+# yarn.lock
 
 # Local development files
-local-server.js
 *.local
+.vscode/
+.idea/
 
 # IDE and editor files
 .vscode/
